# c-cure

./: .gitignore  CLAUDE.md  ExREADME.md  README.md  diff_output.txt  implementation_plan.md  package-lock.json  package.json  status_output.txt  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
backend/: config.json  database.py  inference.py  main.py  monitor.py  multi-seed.py  parser.py  reports_generator.py  test_generator.py  tests.py
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  ml_api.rs  monitor.rs  parser.rs  report.rs
src-tauri/src/db/: analysis_repo.rs  mod.rs  projects_repo.rs  stats_repo.rs
src-tauri/src/inference/: config.rs  dispatcher.rs  kaggle.rs  mock.rs  mod.rs  provider.rs
src-tauri/src/services/: analysis_service.rs  mod.rs
src/lib/: cwe_db.ts  theme.ts  toast.ts  utils.ts  vuln_store.ts
src/lib/stores/: analysis.svelte.ts
src/lib/styles/: backgrounds.css  buttons.css  components.css  theme.css
src/lib/types/: bindings.ts
src/routes/: +layout.svelte  +page.svelte  logic.ts
src/routes/analyzing/: +page.svelte  logic.ts
src/routes/history/: +page.svelte  logic.ts
src/routes/monitor/: +page.svelte
src/routes/settings/: +page.svelte  logic.ts
src/routes/statistics/: +page.svelte
test_project/src/crypto/: cipher.cpp
test_project/src/memory/: pool.cpp
test_project/src/network/: packet.cpp  packet.h  session.cpp
test_project/src/parser/: config_parser.c
test_project/src/storage/: filestore.cpp
test_project/src/utils/: string_ops.cpp
(+8 files in other folders)
