[package]
name = "c-cure-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c_cure_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
open = "5.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# AST Parsing
tree-sitter = "0.22"
tree-sitter-cpp = "0.22"

# Networking (for Kaggle ML API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# PDF Generation
genpdf = "0.2"

# Utilities
regex = "1"
walkdir = "2"
md-5 = "0.10"
chrono = "0.4"
thiserror = "1"
dirs = "5"

[profile.dev]
debug = false

[dev-dependencies]
tempfile = "3"
